<resources>
    <string name="app_name">Barber Shop Kain</string>
    <string name="str_username">Usuario</string>
    <string name="str_password">Contraseña</string>
    <string name="str_sign_in">Iniciar Sesion</string>
    <string name="str_sign_up">Registrarse</string>
    <string name="str_name">Nombre</string>
    <string name="str_email">Correo Electronico</string>
    <string name="str_pass_rep">Repetir Contraseña</string>
    <string name="error_username">El campo usuario es requerido.</string>
    <string name="error_password">El campo contraseña es requerido.</string>
    <string name="str_male">Masculino</string>
    <string name="str_femenino">Femenino</string>
    <string name="error_name">El campo nombre es requerido.</string>
    <string name="error_whats">El campo whatsapp es requerido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Barber Shop Kain</string>
    <string name="nav_header_subtitle">Belleza, cosmética y cuidado personal</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="str_service">Servicios</string>
    <string name="str_appointment">Citas</string>
    <string name="str_info">Informacion</string>
    <string name="str_contact">56 1851 8752</string>
    <string name="str_agender">Agendar Cita</string>
    <string name="str_date">Fecha</string>
    <string name="str_whatsapp">Whatsapp</string>
    <string name="str_hrs">Hora</string>
    <string name="str_desc_serv">Descripcion del servicio</string>
    <string name="str_admin">Control de citas</string>
    <string name="str_guess">invitado</string>
    <string name="str_welcome">Bienvenido</string>
    <string name="str_num_appoint">Cita #</string>
    <string name="str_add_visit">Registrar visita</string>
    <string name="str_perfil">Perfil</string>
    <string name="str_num_visit">Numero de visitas</string>
</resources>